templates/step6/sticky-httproute-template.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sticky-based-httproute
  namespace: app-networking
spec:
  parentRefs:
  - name: app-gateway
    namespace: app-networking
    sectionName: https-listener
  hostnames:
  - "sticky.your-domain.com"
  rules:
  - matches:
    - path:
        type: Exact
        value: /
    backendRefs:
    - name: app1
      namespace: app1
      port: 80
    - name: app2
      namespace: app2
      port: 80
